# mtg-deck

./: CMakeLists.txt  README.md  mtg.cpp  mtg.h  mtg_main.cpp  mtg_realization.cpp
mtg_upgrade/: CMakeLists.txt  mtg_main.cpp
mtg_upgrade/files/: alive.cpp  alive.h  blue.cpp  blue.h  card.cpp  card.h  cat.cpp  cat.h  creature.cpp  creature.h  darkwizard.cpp  darkwizard.h  fireball.cpp  fireball.h  ghost.cpp  ghost.h  green.cpp  green.h  healing.cpp  healing.h  instant.cpp  instant.h  land.cpp  land.h  logo.cpp  logo.h  notalive.cpp  notalive.h  plainswalker.cpp  plainswalker.h  red.cpp  red.h  skeleton.cpp  skeleton.h
