add_executable(main files/alive.h files/blue.h files/card.h files/cat.h files/creature.h files/darkwizard.h files/fireball.h files/ghost.h files/green.h files/healing.h files/instant.h files/land.h files/skeleton.h files/logo.h files/notalive.h files/plainswalker.h files/red.h mtg_main.cpp files/alive.cpp files/blue.cpp files/card.cpp files/cat.cpp files/creature.cpp files/darkwizard.cpp files/fireball.cpp files/ghost.cpp files/green.cpp files/healing.cpp files/instant.cpp files/land.cpp files/logo.cpp files/notalive.cpp files/plainswalker.cpp files/red.cpp files/skeleton.cpp)
